--- a/views/comics_show.ejs
+++ b/views/comics_show.ejs
@@ -40,12 +40,14 @@
 				</tr>
 			  </tbody>
 			</table>
-			<a href="/comics/<%= comic._id %>/edit">
-				<button type="button" class="btn btn-outline-info btn-lg btn-block mb-2 w-100">Edit</button>
-			</a>
-			<form action="/comics/<%= comic._id%>?_method=DELETE" method="post">
-				<button type="submit" class="btn btn-outline-danger btn-lg btn-block w-100">Delete</button>
-			</form>
+			<% if (user && user.username === comic.owner.username) { %> 
+				<a href="/comics/<%= comic._id %>/edit">
+					<button type="button" class="btn btn-outline-info btn-lg btn-block mb-2 w-100">Edit</button>
+				</a>
+				<form action="/comics/<%= comic._id%>?_method=DELETE" method="post">
+					<button type="submit" class="btn btn-outline-danger btn-lg btn-block w-100">Delete</button>
+				</form>
+			<% } %> 
 		</div>
 	</div>
 	<div class='row show_comment-header mt-3'>
@@ -54,21 +56,24 @@
 	<a href="/comics/<%= comic._id %>/comments/new">
 		<button class="btn btn-success btn-lg mt-3 mb-4">Add Comment</button>
 	</a>
-	<% comments.forEach((comment) => { %> 
-	<div class='row show_comment-container py-2 border'>
-		<div class='col-2 border-right my-auto'>
-			<%= comment.user.username %>
-		</div>
-		<div class='col-2 border-right my-auto d-flex flex-wrap justify-content-center'>
-			<a class='btn btn-sm btn-success w-75 p-0 my-1' href='/comics/<%= comic._id %>/comments/<%=comment._id%>/edit'>
-				Edit
-			</a>
-			<form class='w-75 my-1' action='/comics/<%= comic._id %>/comments/<%= comment._id %>?_method=DELETE' method='post'>
-				<button class='btn btn-sm btn-danger w-100 p-0'>
-					Delete
-				</button>
-			</form>
-		</div>
+
+		<% comments.forEach((comment) => { %> 
+		<div class='row show_comment-container py-2 border'>
+			<div class='col-2 border-right my-auto'>
+				<%= comment.user.username %>
+			</div>
+			<div class='col-2 border-right my-auto d-flex flex-wrap justify-content-center'>
+				<% if (user && user.username === comic.owner.username) { %>
+					<a class='btn btn-sm btn-success w-75 p-0 my-1' href='/comics/<%= comic._id %>/comments/<%=comment._id%>/edit'>
+						Edit
+					</a>
+					<form class='w-75 my-1' action='/comics/<%= comic._id %>/comments/<%= comment._id %>?_method=DELETE' method='post'>
+						<button class='btn btn-sm btn-danger w-100 p-0'>
+							Delete
+						</button>
+					</form>
+				<% } %> 
+		</div>	
 		<div class='col-8 my-auto'>
 			<%= comment.text %>
 		</div>
