--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -26,10 +26,11 @@
             <a class="dropdown-item" href="#">Historical</a>
           </div>
         </li>
-		    <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="/comics/new">Add Comic</a>
-        </li>
-		  
+			<% if (user) { %> 
+		  	<li class="nav-item">
+          		<a class="nav-link" aria-current="page" href="/comics/new">Add Comic</a>
+        	</li>
+		  	<% } %> 
 		  <% if(user) { %>
 			<li class="nav-item">
           		<a class="nav-link active" aria-current="page" href="/logout">Logout</a>
