Added genre functionality

--- a/views/comics_new.ejs
+++ b/views/comics_new.ejs
@@ -34,14 +34,15 @@
     <label for="genre" class="form-label">Genre</label>
 	<select class="form-control" id="genre" name="genre">
 		<option disabled selected>-- Choose Below --</option>
+		<option>Manga</option>
 		<option>Shonen</option>
-		<option>Slice of Life</option>
-		<option>Horror</option>
-		<option>Drama</option>
-		<option>Historical</option>
 		<option>Josei</option>
-		<option>Fantasy</option>
+		<option>Slice-of-Life</option>
+		<option>Drama</option>
+		<option>Horror</option>
 		<option>Sports</option>
+		<option>Comedy</option>
+		<option>Historical</option>
 	</select>
   </div>
   <div class="form-group form-check">
