--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -15,15 +15,15 @@
             Genres
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Manga</a>
-            <a class="dropdown-item" href="#">Shonen</a>
-            <a class="dropdown-item" href="#">Josei</a>
-			<a class="dropdown-item" href="#">Slice-of-Life</a>
-            <a class="dropdown-item" href="#">Drama</a>
-            <a class="dropdown-item" href="#">Horror</a>
-			<a class="dropdown-item" href="#">Sports</a>
-            <a class="dropdown-item" href="#">Comedy</a>
-            <a class="dropdown-item" href="#">Historical</a>
+            <a class="dropdown-item" href="/comics/genre/manga">Manga</a>
+            <a class="dropdown-item" href="/comics/genre/shonen">Shonen</a>
+            <a class="dropdown-item" href="/comics/genre/josei">Josei</a>
+			<a class="dropdown-item" href="/comics/genre/slice-of-life">Slice-of-Life</a>
+            <a class="dropdown-item" href="/comics/genre/drama">Drama</a>
+            <a class="dropdown-item" href="/comics/genre/horror">Horror</a>
+			<a class="dropdown-item" href="/comics/genre/sports">Sports</a>
+            <a class="dropdown-item" href="/comics/genre/comedy">Comedy</a>
+            <a class="dropdown-item" href="/comics/genre/historical">Historical</a>
           </div>
         </li>
 			<% if (user) { %> 
