--- a/views/comics_edit.ejs
+++ b/views/comics_edit.ejs
@@ -34,13 +34,14 @@
     <label for="genre" class="form-label">Genre</label>
 	<select class="form-control" id="genre" name="genre">
 		<option disabled>-- Choose Below --</option>
+		<option<%= comic.genre === 'Manga' ? 'selected' : ''%>>Manga</option>
 		<option<%= comic.genre === 'Shonen' ? 'selected' : ''%>>Shonen</option>
-		<option<%= comic.genre === 'slice of life' ? 'selected' : ''%>>Slice of Life</option>
+		<option<%= comic.genre === 'slice-of-life' ? 'selected' : ''%>>Slice-of-Life</option>
 		<option<%= comic.genre === 'horror' ? 'selected' : ''%>>Horror</option>
 		<option<%= comic.genre === 'drama' ? 'selected' : ''%>>Drama</option>
 		<option<%= comic.genre === 'historical' ? 'selected' : ''%>>Historical</option>
 		<option<%= comic.genre === 'josei' ? 'selected' : ''%>>Josei</option>
-		<option<%= comic.genre === 'fantasy' ? 'selected' : ''%>>Fantasy</option>
+		<option<%= comic.genre === 'comedy' ? 'selected' : ''%>>Comedy</option>
 		<option<%= comic.genre === 'sports' ? 'selected' : ''%>>Sports</option>
 	</select>
   </div>
