--- a/views/comics_show.ejs
+++ b/views/comics_show.ejs
@@ -58,7 +58,7 @@
 			<% if (user) { %>
 				<button id="upvote_btn" class="btn btn-outline-success btn-lg mt-3">+</button>
 			<% } %>
-				<span id="score" class="mx-2">10</span>
+				<span id="score" class="mx-2 pt-2">10</span>
 			<% if (user) { %>
 				<button id="downvote_btn"class="btn btn-outline-danger btn-lg mt-3">-</button>
 			<% } %>
@@ -90,6 +90,9 @@
 	<% }) %>
 	<div class='py-5'></div>
 </div>
+<script>
+	var comicId = "<%- comic._id %>"
+</script>
 <script src='/js/comics_show.js'></script>
 
 
