--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,8 +1,41 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 
-<form action ="/comics/" method="get">
-	<button type= "submit">
-		Enter
-	</button>
-</form>
+    <link rel="stylesheet" href="/public/css/landing.css" />
+    
+    <title>Test</title>
+  </head>
+  <body class="d-flex h-100 text-center text-white bg-dark">
+    
+    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+      <header class="mb-auto">
+        <div>
+          <h3 class="float-md-start mb-0">Comic Showcase</h3>
+          <nav class="nav nav-masthead justify-content-center float-md-end">
+            <a class="nav-link active" aria-current="page" href="/comics">Home</a>
+            <a class="nav-link" href="/login">Login</a>
+            <a class="nav-link" href="/contact">Contact</a>
+          </nav>
+        </div>
+      </header>
+    
+      <main class="px-3">
+        <h1><strong>Showcase the comics you love!</strong></h1>
+        <p class="lead">Comics showcase is the premier website to show off the comcis you love! Simply enter in the comics that you have read and enjoyed. Then watch and see as the comics are immortalized on the web!</p>
+        <p class="lead">
+          <a href="/aboutme" class="btn btn-lg btn-secondary fw-bold border-white">Learn More!</a>
+        </p>
+      </main>
 
-
+    </div>
+    
+    
+        
+      </body>
+    </html>
+</html>
