--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -28,7 +28,7 @@
         <h1><strong>Showcase the comics you love!</strong></h1>
         <p class="lead">Comics showcase is the premier website to show off the comcis you love! Simply enter in the comics that you have read and enjoyed. Then watch and see as the comics are immortalized on the web!</p>
         <p class="lead">
-          <a href="/name/" class="btn btn-lg btn-secondary fw-bold border-white">Learn More!</a>
+          <a href="/aboutme/" class="btn btn-lg btn-secondary fw-bold border-white">Learn More!</a>
         </p>
       </main>
 
