--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -88,7 +88,7 @@
         </li>
         <% }%>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/name"
+          <a class="nav-link active" aria-current="page" href="/aboutme"
             >About Me</a
           >
         </li>
