fixed webpage title

--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" href="/public/css/landing.css" />
     
-    <title>Test</title>
+    <title>Comic Book Capstone Project</title>
   </head>
   <body class="d-flex h-100 text-center text-white bg-dark">
     
